--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -30,6 +30,11 @@ body {
   padding: 30px 25px;
 }
 
+.calculator__title {
+  font-size: 24px;
+  color: $primary-color-night;
+}
+
 .calculator__panel {
   text-align: right;
   margin: 30px 0px;
@@ -75,5 +80,11 @@ body {
 
   &-long {
     grid-row: span 2;
+    color: $text-color-night;
+    background-color: $primary-color-night;
+
+    &:hover {
+      border: 1px solid $text-color-night;
+    }
   }
 }
