--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -23,6 +23,11 @@ body {
   padding: 30px 25px;
 }
 
+.calculator__title {
+  font-size: 24px;
+  color: #334155;
+}
+
 .calculator__panel {
   text-align: right;
   margin: 30px 0px;
@@ -58,6 +63,11 @@ body {
 }
 .calculator__button-long {
   grid-row: span 2;
+  color: #94a3b8;
+  background-color: #334155;
+}
+.calculator__button-long:hover {
+  border: 1px solid #94a3b8;
 }
 
 /*# sourceMappingURL=style.css.map */
