--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -39,6 +39,7 @@ body {
   .calculator__panel {
     text-align: right;
     margin: 30px 0px;
+    height: 130px;
 
     &-decision {
       font-size: 16px;
@@ -62,6 +63,7 @@ body {
     text-align: center;
 
     color: $text-color-light;
+    background-color: $primary-color-light;
 
     box-shadow: 8px 8px 16px #c9d9e8, -8px -8px 16px #ffffff;
     border-radius: 24px;
