--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -30,6 +30,7 @@ body {
 .calculator .calculator__panel {
   text-align: right;
   margin: 30px 0px;
+  height: 130px;
 }
 .calculator .calculator__panel-decision {
   font-size: 16px;
@@ -46,6 +47,7 @@ body {
   cursor: pointer;
   text-align: center;
   color: #36597d;
+  background-color: #f1f5f9;
   box-shadow: 8px 8px 16px #c9d9e8, -8px -8px 16px #ffffff;
   border-radius: 24px;
   border: 1px solid transparent;
