--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -35,10 +35,14 @@ body {
 .calculator .calculator__panel-decision {
   font-size: 16px;
   color: #94a3b8;
+  height: 25px;
 }
 .calculator .calculator__panel-result {
   font-size: 72px;
   color: #334155;
+  height: 105px;
+  word-wrap: break-word;
+  overflow: hidden;
 }
 .calculator .calculator__button {
   min-width: 80px;
